--- a/main.scss
+++ b/main.scss
@@ -30,7 +30,7 @@ $white: #fff;
 @import "css/blocks/promo";
 @import "css/blocks/btn";
 @import "css/blocks/best";
-@import "css/blocks/dark";
+@import "css/blocks/slider";
 @import "css/blocks/team";
 @import "css/blocks/menu";
 @import "css/blocks/comment";
