--- a/main.css
+++ b/main.css
@@ -675,12 +675,114 @@ p {
         text-align: start;
         margin-left: 0.625rem; } }
 
-.dark {
+.slider {
   background-image: url(./my_page/img/pageburg/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   position: relative; }
+  .slider__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+  .slider__left {
+    width: 1.8125rem;
+    height: 0.9375rem;
+    background-image: url("./my_page/img/pageheder/arrow-scroll.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: block;
+    position: absolute;
+    left: 5%;
+    bottom: 50%;
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    cursor: pointer; }
+  .slider__right {
+    width: 1.8125rem;
+    height: 0.9375rem;
+    background-image: url("./my_page/img/pageheder/arrow-scroll.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: block;
+    position: absolute;
+    right: 5%;
+    bottom: 50%;
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    cursor: pointer; }
+  .slider__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+  .slider__burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start; }
+    .slider__burger__drop {
+      margin: 0 0 -0.9375rem 1.875rem;
+      cursor: pointer; }
+      .slider__burger__drop:hover {
+        background: #e35028;
+        border-radius: 10px; }
+    .slider__burger__icon {
+      margin-left: 1.875rem;
+      margin-top: -1.5625rem; }
+  .slider__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    color: #fff; }
+    .slider__content p {
+      font-size: 14px;
+      font-family: 'Ubuntu', Helvetica, sans-serif;
+      font-weight: 300;
+      line-height: 1.714; }
+  .slider__prise {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline; }
+    .slider__prise_title {
+      font-family: 'Gagalin', Helvetica, sans-serif;
+      font-size: 72px;
+      color: #e35028;
+      margin-right: 20px; }
+    .slider__prise_subtitle {
+      font-size: 30px; }
 
 .team {
   background-image: url(./my_page/img/pageteam/bgteam.png);
@@ -752,15 +854,25 @@ p {
       .team-acco__container--active .team-acco__name_icon {
         -webkit-transform: rotate(180deg);
         -ms-transform: rotate(180deg);
-        transform: rotate(180deg); }
+        transform: rotate(180deg);
+        -webkit-transition: 1s;
+        -o-transition: 1s;
+        transition: 1s; }
       .team-acco__container--active .team-acco__name_prof {
-        color: #f9b43b; }
+        color: #f9b43b;
+        -webkit-transition: 1s;
+        -o-transition: 1s;
+        transition: 1s; }
       .team-acco__container--active .team-acco__desc {
-        height: 100%; }
+        height: 100%;
+        -webkit-transition: 1s;
+        -o-transition: 1s;
+        transition: 1s; }
     .team-acco__name {
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; }
+      display: flex;
+      cursor: pointer; }
       .team-acco__name_prof {
         margin-left: 1.125rem;
         font-family: 'Gagalin', Helvetica, sans-serif;
@@ -828,10 +940,13 @@ p {
   background-size: cover;
   background-position: center center;
   position: relative; }
+  .menu__mmmm {
+    position: static;
+    display: block; }
   .menu__title {
-    top: 6.875rem;
-    left: 5.875rem;
     position: absolute;
+    top: 10%;
+    left: 5%;
     color: #fff; }
     @media screen and (max-width: 480px) {
       .menu__title {
@@ -841,16 +956,17 @@ p {
     right: 0;
     top: 0;
     bottom: 0;
+    overflow: hidden;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    overflow: hidden;
     list-style: none;
     display: flex; }
     .menu-acco__item {
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; }
+      display: flex;
+      position: relative; }
       .menu-acco__item--active .menu-acco__name {
         color: #f9b43b; }
       .menu-acco__item--active .menu-acco__content {
@@ -858,6 +974,13 @@ p {
         padding: 3.875rem 2.1875rem;
         visibility: visible;
         opacity: 1; }
+        @media screen and (max-width: 768px) {
+          .menu-acco__item--active .menu-acco__content {
+            max-width: 18.75rem;
+            padding: 2rem 1.0625rem; } }
+        @media screen and (max-width: 768px) {
+          .menu-acco__item--active .menu-acco__content {
+            max-width: 21.875rem; } }
     .menu-acco__name {
       position: relative;
       width: 5rem;
@@ -1006,28 +1129,48 @@ p {
         display: -ms-flexbox;
         display: flex;
         width: 60%;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
-        margin-left: 20%; } }
+        margin-left: 0; } }
     @media screen and (max-width: 480px) {
       .form .form {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        width: 95%;
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        margin: 0; } }
+        width: 95%;
+        margin-left: 2.5%; } }
+    .form .form__container {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      @media screen and (max-width: 480px) {
+        .form .form__container {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          justify-content: center;
+          width: 95%;
+          margin: 0; } }
   .form__title {
     text-align: center;
     color: #f9b43b;
@@ -1083,7 +1226,7 @@ p {
     @media screen and (max-width: 480px) {
       .form__comment {
         text-align: center;
-        margin: 0 auto; } }
+        margin-left: 0; } }
   .form__radio {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
