--- a/css/blocks/work.scss
+++ b/css/blocks/work.scss
@@ -4,4 +4,55 @@
   background-size: cover;
   background-position: center center;
   position: relative;
+
+  &__title {
+    text-align: center;
+    padding-bottom: rem(50px);
+
+
+  }
+
+  &__video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    
+  }
+
+  &__player {
+    position: relative;
+    max-width: 660px;
+    max-height: 375px;
+
+
+    &_img {
+      fill: rgba($color: $white, $alpha: .8);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      &--active {
+        opacity: 0;
+      }
+    }
+  }
+
+  &__toolbar {
+    display: flex;
+    width: 660px;
+    height: 40px;
+    background-color: #3e3e3e;
+    margin-top: -11px;
+
+  }
+}
+
+#player {
+  min-width: 660px;
+  min-width: 660px;
+  min-height: 370px;
+  max-height: 370px;
 }
