--- a/main.scss
+++ b/main.scss
@@ -39,4 +39,5 @@ $white: #fff;
 @import "css/blocks/footer";
 @import "css/blocks/fix_menu";
 @import "css/blocks/burgermenu";
-
+@import "css/blocks/duration";
+@import "css/blocks/sound";
