--- a/main.css
+++ b/main.css
@@ -717,6 +717,26 @@ p {
     -ms-transform: rotate(-90deg);
     transform: rotate(-90deg);
     cursor: pointer; }
+  .slider__menu {
+    width: 100%;
+    height: 100%;
+    overflow: hidden; }
+  .slider__list {
+    width: 960px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    list-style-type: none;
+    will-change: right;
+    -webkit-transition: .5s all ease-out;
+    -o-transition: .5s all ease-out;
+    transition: .5s all ease-out; }
+    @media screen and (max-width: 768px) {
+      .slider__list {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; } }
   .slider__item {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -724,7 +744,26 @@ p {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
-    flex-direction: row; }
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    -webkit-box-flex: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0; }
+    @media screen and (max-width: 768px) {
+      .slider__item {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center; } }
   .slider__burger {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -739,15 +778,44 @@ p {
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start; }
+    @media screen and (max-width: 768px) {
+      .slider__burger_img {
+        width: 100%;
+        top: 50%;
+        left: 30%; } }
+    @media screen and (max-width: 768px) {
+      .slider__burger {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row; } }
     .slider__burger__drop {
       margin: 0 0 -0.9375rem 1.875rem;
       cursor: pointer; }
+      @media screen and (max-width: 768px) {
+        .slider__burger__drop {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+          flex-direction: row;
+          width: 10%; } }
       .slider__burger__drop:hover {
         background: #e35028;
         border-radius: 10px; }
     .slider__burger__icon {
       margin-left: 1.875rem;
       margin-top: -1.5625rem; }
+      @media screen and (max-width: 768px) {
+        .slider__burger__icon {
+          position: absolute;
+          right: 40%;
+          top: 4%; } }
   .slider__content {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -760,6 +828,10 @@ p {
     -ms-flex-pack: space-evenly;
     justify-content: space-evenly;
     color: #fff; }
+    @media screen and (max-width: 768px) {
+      .slider__content {
+        text-align: center;
+        width: 60%; } }
     .slider__content p {
       font-size: 14px;
       font-family: 'Ubuntu', Helvetica, sans-serif;
