--- a/css/blocks/sound.scss
+++ b/css/blocks/sound.scss
@@ -1,4 +1,4 @@
-.sound {
+/* .sound {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,4 +18,4 @@
   &__volume {
     margin-left: rem(20px);
   }
-}
+} */
