--- a/main.scss
+++ b/main.scss
@@ -41,3 +41,4 @@ $white: #fff;
 @import "css/blocks/burgermenu";
 @import "css/blocks/duration";
 @import "css/blocks/sound";
+@import "css/blocks/drop";
